--- a/prime_admin/templates/lms/add_funds_modal.html
+++ b/prime_admin/templates/lms/add_funds_modal.html
@@ -1,4 +1,4 @@
-<div id="mdl_add_funds" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+<div id="mdl_add_fund" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
      aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -9,26 +9,11 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{{url_for('lms.add_fund')}}" method="POST" novalidate="novalidate">
+                <form id="frm_add_fund" action="{{url_for('lms.fund_wallet_add_fund')}}" method="POST" novalidate="novalidate">
                     <div class="main-card mb-3 card">
                         <div class="card-body">
-                        <!-- <h5 class="card-title">Student Information</h5> -->
-
-                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                            <!-- <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/> -->
                             <div class="form-row">
-                                <!-- <div class="col-md-6">
-                                    <div class="position-relative form-group"><label for="date_deposit"
-                                            class="">Date</label>
-                                            <input name="date" id="date"
-                                            type="date" class="form-control" required>
-                                            <div class="valid-feedback">
-                                                Looks good!
-                                            </div>
-                                            <div class="invalid-feedback">
-                                                Please provide a valid date
-                                            </div>
-                                        </div>
-                                </div> -->
                                 <div class="col-md-6">
                                     <div class="position-relative form-group">
                                         <label for="branch" class="">Branch</label>
@@ -61,7 +46,6 @@
                                        </div>
                                 </div>
                             </div>
-                            
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="amount_received"
@@ -76,7 +60,6 @@
                                             </div>
                                 </div>
                             </div>
-
                             <div class="form-row">
                                 <div class="col-md-12">
                                     <div class="position-relative form-group"><label for="remarks"
