--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -1,11 +1,47 @@
 {% extends "admin/admin_base.html" %}
 
 
-{% block head %} {% endblock %}
+{% block head %}
+<!-- sweet alert framework -->
+<link rel="stylesheet" type="text/css" href="{{url_for('bp_admin.static', filename='bower_components/sweetalert/css/sweetalert.css')}}">
+{% endblock %}
 
 
 {% block scripts %}
+<!-- sweet alert js -->
+<script type="text/javascript" src="{{url_for('bp_admin.static', filename='bower_components/sweetalert/js/sweetalert.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('bp_admin.static', filename='js/modal.js')}}"></script>
 <script>
+    $.ajaxSetup({
+        beforeSend: function (xhr, settings) {
+            if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", CSRF_TOKEN);
+            }
+        }
+    });        
+
+    $.validator.setDefaults({
+        errorElement: 'span',
+        errorPlacement: function (error, element) {
+            error.addClass('invalid-feedback');
+            element.closest('.form-group').append(error);
+        },
+        highlight: function (element, errorClass, validClass) {
+            $(element).addClass('is-invalid');
+        },
+        unhighlight: function (element, errorClass, validClass) {
+            $(element).removeClass('is-invalid');
+        }
+    });
+
+    function clearCreateModal(){
+        $(':input','#mdl_add_fund')
+            .not(':button, :submit, :reset, :hidden')
+            .val('')
+            .prop('checked', false)
+            .prop('selected', false);
+    }
+
     $(document).ready(function(){
         var dtbl_fund_wallet_statements = $("#tbl_fund_wallet_statements").DataTable({
             "dom": 'rtip',
@@ -13,10 +49,7 @@
             "autoWidth": false,
             "serverSide": true,
             "ajax": {
-                "url": "/learning-management/api/dtbl/fund-wallet-statements",
-                "data": function (d) {
-                    d.branch = $("#btn_branch_label").val();
-                },
+                "url": "/learning-management/branches/all/fund-wallet-statements/dt",
                 "dataSrc": function(json){
                     $("#total_fund_wallet").html("₱" + json.totalFundWallet);
                     return json.data;
@@ -28,6 +61,65 @@
             "columnDefs": [
             ],
             "order": [[1, 'asc']],
+        });
+
+        $('#frm_add_fund').validate({
+            'rules': {
+                'branch': {
+                    'required': true
+                },
+                'bank_name': {
+                    'required': true,
+                },
+                'transaction_no': {
+                    'required': true
+                },
+                'sender': {
+                    'required': true,
+                },
+                'amount_received': {
+                    'required': true,
+                },
+                'receiver': {
+                    'required': true,
+                },
+                'remarks': {
+                    'required': true,
+                },
+            },
+            'submitHandler': function(form){
+                var xform = $(form);
+
+                swal({
+                    title: `Add fund to fund wallet?`,
+                    text: "Double check your inputted data!",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonClass: "btn-danger",
+                    confirmButtonText: "Confirm!",
+                    closeOnConfirm: false,
+                    showLoaderOnConfirm: true
+                }, function(){
+                    setTimeout(function () {
+                        $.ajax({
+                            type: xform.attr('method'),
+                            url: xform.attr('action'),
+                            data: xform.serialize(),
+                            success: function (response) {
+                                event.stopPropagation();
+
+                                dtbl_fund_wallet_statements.ajax.reload();
+                                swal("Success!", response.message, "success");
+                                $("#mdl_add_fund .close").click()
+                                clearCreateModal();
+                            },
+                            error: function (data) {
+                                swal("Error Occured!", "Please refresh the page then try again!", "error");
+                            },
+                        });
+                    }, 500);
+                });
+            }
         });
 
         var dtbl_fund_wallet_transactions = $("#tbl_fund_wallet_transactions").DataTable({
@@ -80,8 +172,10 @@
          });
 
         $("#btn_branch_label").change(function () {
+            const branchId = $("#btn_branch_label").val();
+
+            dtbl_fund_wallet_statements.ajax.url(`/learning-management/branches/${branchId}/fund-wallet-statements/dt`).load();
             dtbl_fund_wallet_transactions.ajax.reload();
-            dtbl_fund_wallet_statements.ajax.reload();
             dtbl_expenses_transactions.ajax.reload();
         });
 
@@ -183,54 +277,6 @@
                 getContactPersons();
             }
         });
-
-        $('#frm_create_area').validate({
-            'rules': {
-                'name': {
-                    'required': true
-                },
-                'description': {
-                    'required': true,
-                },
-                'municipality': {
-                    'required': true,
-                },
-            },
-            'submitHandler': function(form){
-                var xform = $(form);
-
-                swal({
-                    title: `Create this new Area?`,
-                    text: "Double check your inputted data!",
-                    type: "warning",
-                    showCancelButton: true,
-                    confirmButtonClass: "btn-danger",
-                    confirmButtonText: "Confirm!",
-                    closeOnConfirm: false,
-                    showLoaderOnConfirm: true
-                }, function(){
-                    setTimeout(function () {
-                        $.ajax({
-                            type: xform.attr('method'),
-                            url: xform.attr('action'),
-                            data: xform.serialize(),
-                            success: function (response) {
-                                dt_areas.ajax.reload();
-
-                                swal("Success!", response.message, "success");
-
-                                event.stopPropagation();
-                                $("#mdl_create_area").removeClass('md-show');
-                                clearCreateModal();
-                            },
-                            error: function (data) {
-                                swal("Error Occured!", "Please refresh the page then try again!", "error");
-                            },
-                        });
-                    }, 500);
-                });
-            }
-        });
     });
 
     function getContactPersons(){
@@ -271,7 +317,7 @@
             </div>
             <div class="page-title-actions">
                 {% if current_user.role.name in ["Admin"] %}
-                    <button type="button" data-toggle="modal" data-target="#mdl_add_funds" data-placement="bottom"
+                    <button type="button" data-toggle="modal" data-target="#mdl_add_fund" data-placement="bottom"
                             class="btn-shadow mr-3 btn btn-primary">
                         <i class="fa fa-plus"></i> Add funds
                     </button>
