--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -1,6 +1,12 @@
 {% extends "admin/admin_base.html" %}
 
 
+{% block modals %}
+    {% include 'lms/add_funds_modal.html' %}
+    {% include 'lms/add_expenses_modal.html' %}
+{% endblock %}
+
+
 {% block head %}
 <!-- sweet alert framework -->
 <link rel="stylesheet" type="text/css" href="{{url_for('bp_admin.static', filename='bower_components/sweetalert/css/sweetalert.css')}}">
@@ -20,6 +26,7 @@
         }
     });        
 
+
     $.validator.setDefaults({
         errorElement: 'span',
         errorPlacement: function (error, element) {
@@ -34,13 +41,40 @@
         }
     });
 
+
     function clearCreateModal(){
         $(':input','#mdl_add_fund')
             .not(':button, :submit, :reset, :hidden')
             .val('')
             .prop('checked', false)
             .prop('selected', false);
+
+        $(':input','#mdl_add_expenses')
+            .not(':button, :submit, :reset, :hidden')
+            .val('')
+            .prop('checked', false)
+            .prop('selected', false);
     }
+
+
+    function getContactPersons(){
+        var userBranch = $("#branch_expenses").val();
+
+        $.getJSON('/learning-management/api/get-branch-contact-persons/' + userBranch, function(response){
+            if (response.data.length > 0) {
+                $('#description').append(newOption);
+
+                for (i = 0; i < response.data.length; i++) {
+                    var newOption = $(`<option value="${response.data[i].id}">${response.data[i].fname}</option>`);
+                    $('#description').append(newOption);
+                }
+            } else {
+                var newOption = $('<option value="">No Contact Persons available</option>');
+                $('#description').append(newOption);
+            }
+        });
+    }
+
 
     $(document).ready(function(){
         var dtbl_fund_wallet_statements = $("#tbl_fund_wallet_statements").DataTable({
@@ -62,6 +96,75 @@
             ],
             "order": [[1, 'asc']],
         });
+
+
+        var dtbl_add_funds_transactions = $("#tbl_add_funds_transactions").DataTable({
+            "dom": 'rtip',
+            "processing": true,
+            "autoWidth": false,
+            "serverSide": true,
+            "ajax": {
+                "url": "/learning-management/branches/all/add-funds-transactions/dt",
+                "dataSrc": function(json){
+                    $("#total_fund_wallet").html("₱" + json.totalFundWallet);
+                    return json.data;
+                }
+            },
+            "pageLength": 25,
+            "ordering": false,
+            "order": [[ 0, 'asc' ]],
+            "columnDefs": [
+            ],
+            "order": [[1, 'asc']],
+        });
+
+
+        var dtbl_expenses_transactions = $("#tbl_expenses_transactions").DataTable({
+            "dom": 'rtip',
+            "processing": true,
+            "autoWidth": false,
+            "serverSide": true,
+            "ajax": {
+                "url": "/learning-management/branches/all/expenses-transactions/dt",
+                "dataSrc": function(json){
+                    $("#total_utilities").html("₱" + json.totalUtilities);
+                    $("#total_office_supplies").html("₱" + json.totalOfficeSupplies);
+                    $("#total_salaries_and_rebates").html("₱" + json.totalSalariesAndRebates);
+                    $("#total_other_expenses").html("₱" + json.totalOtherExpenses);
+                    return json.data;
+                }
+            },
+            "pageLength": 25,
+            "ordering": false,
+            "order": [[ 0, 'asc' ]],
+            "columnDefs": [
+            ],
+            "order": [[1, 'asc']],
+         });
+
+
+        $("#div_branch_buttons").on('click', '.btn-branch', function () {
+            var branch_name = $(this).html();
+    
+            // if(!(localStorage.getItem('sessSubArea') == _sub_area_name)){
+            $("#btn_branch_label").html(branch_name.toUpperCase());
+            $("#btn_branch_label").val($(this).val());
+            $("#card_header_label").html(branch_name);
+    
+            $('#btn_branch_label').trigger('change');
+        });
+
+
+        $("#btn_branch_label").change(function () {
+            const branchId = $("#btn_branch_label").val();
+
+            dtbl_fund_wallet_statements.ajax.url(`/learning-management/branches/${branchId}/fund-wallet-statements/dt`).load();
+            dtbl_add_funds_transactions.ajax.url(`/learning-management/branches/${branchId}/add-funds-transactions/dt`).load();
+            dtbl_expenses_transactions.ajax.url(`/learning-management/branches/${branchId}/expenses-transactions/dt`).load();
+        });
+
+
+        // --------------------- ADD FUND ------------------------
 
         $('#frm_add_fund').validate({
             'rules': {
@@ -109,6 +212,8 @@
                                 event.stopPropagation();
 
                                 dtbl_fund_wallet_statements.ajax.reload();
+                                dtbl_add_funds_transactions.ajax.reload();
+                                dtbl_expenses_transactions.ajax.reload();
                                 swal("Success!", response.message, "success");
                                 $("#mdl_add_fund .close").click()
                                 clearCreateModal();
@@ -122,94 +227,106 @@
             }
         });
 
-        var dtbl_fund_wallet_transactions = $("#tbl_fund_wallet_transactions").DataTable({
-            "dom": 'rtip',
-            "processing": true,
-            "autoWidth": false,
-            "serverSide": true,
-            "ajax": {
-                "url": "/learning-management/api/dtbl/add-funds-transactions",
-                "data": function (d) {
-                    d.branch = $("#btn_branch_label").val();
+        // --------------------- ADD EXPENSES ------------------------
+        
+
+        var frm_add_expenses_validator =$('#frm_add_expenses').validate({
+            'rules': {
+                'branch': {
+                    'required': true
                 },
-                "dataSrc": function(json){
-                    $("#total_fund_wallet").html("₱" + json.totalFundWallet);
-                    return json.data;
-                }
-            },
-            "pageLength": 25,
-            "ordering": false,
-            "order": [[ 0, 'asc' ]],
-            "columnDefs": [
-            ],
-            "order": [[1, 'asc']],
-        });
-
-        var dtbl_expenses_transactions = $("#tbl_expenses_transactions").DataTable({
-            "dom": 'rtip',
-            "processing": true,
-            "autoWidth": false,
-            "serverSide": true,
-            "ajax": {
-                "url": "/learning-management/api/dtbl/expenses-transactions",
-                "data": function (d) {
-                    d.branch = $("#btn_branch_label").val();
+                'category': {
+                    'required': true,
                 },
-                "dataSrc": function(json){
-                    $("#total_utilities").html("₱" + json.totalUtilities);
-                    $("#total_office_supplies").html("₱" + json.totalOfficeSupplies);
-                    $("#total_salaries_and_rebates").html("₱" + json.totalSalariesAndRebates);
-                    $("#total_other_expenses").html("₱" + json.totalOtherExpenses);
-                    return json.data;
-                }
+                'description': {
+                    'required': true
+                },
+                'account_no': {
+                    'required': true,
+                },
+                'billing_month_from': {
+                    'required': true,
+                },
+                'billing_month_to': {
+                    'required': true,
+                },
+                'qty': {
+                    'required': true,
+                },
+                'unit_price': {
+                    'required': true,
+                },
+                'total_amount_due': {
+                    'required': true,
+                },
+                'settled_by': {
+                    'required': true,
+                },
+                'remarks': {
+                    'required': true,
+                },
             },
-            "pageLength": 25,
-            "ordering": false,
-            "order": [[ 0, 'asc' ]],
-            "columnDefs": [
-            ],
-            "order": [[1, 'asc']],
-         });
+            'submitHandler': function(form){
+                var xform = $(form);
 
-        $("#btn_branch_label").change(function () {
-            const branchId = $("#btn_branch_label").val();
+                swal({
+                    title: `Add expenses?`,
+                    text: "Double check your inputted data!",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonClass: "btn-danger",
+                    confirmButtonText: "Confirm!",
+                    closeOnConfirm: false,
+                    showLoaderOnConfirm: true
+                }, function(){
+                    setTimeout(function () {
+                        $.ajax({
+                            type: xform.attr('method'),
+                            url: xform.attr('action'),
+                            data: xform.serialize(),
+                            success: function (response) {
+                                event.stopPropagation();
 
-            dtbl_fund_wallet_statements.ajax.url(`/learning-management/branches/${branchId}/fund-wallet-statements/dt`).load();
-            dtbl_fund_wallet_transactions.ajax.reload();
-            dtbl_expenses_transactions.ajax.reload();
-        });
-
-        $("#div_branch_buttons").on('click', '.btn-branch', function () {
-            var branch_name = $(this).html();
-    
-            // if(!(localStorage.getItem('sessSubArea') == _sub_area_name)){
-            $("#btn_branch_label").html(branch_name.toUpperCase());
-            $("#btn_branch_label").val($(this).val());
-            $("#card_header_label").html(branch_name);
-    
-            $('#btn_branch_label').trigger('change');
-            // dtbl_subscribers.ajax.url(`/bds/api/sub-areas/${$(this).val()}/subscribers`).load();
-            // }
-    
+                                dtbl_fund_wallet_statements.ajax.reload();
+                                dtbl_add_funds_transactions.ajax.reload();
+                                dtbl_expenses_transactions.ajax.reload();
+                                swal("Success!", response.message, "success");
+                                $("#mdl_add_expenses .close").click()
+                                clearCreateModal();
+                            },
+                            error: function (data) {
+                                swal("Error Occured!", "Please refresh the page then try again!", "error");
+                            },
+                        });
+                    }, 500);
+                });
+            }
         });
 
 
         $("#category").change(function(){
             var selectedCategory = $(this).val();
-            $("#description").empty()
+
+            frm_add_expenses_validator.resetForm();
+
+            $("#description").empty();
             $("#description").append($('<option></option>').attr("value", "").text("Choose category first..."));
+
             $("#qty").prop('disabled', false);
             $("#unit_price").prop('disabled', false);
             $("#account_no").prop('disabled', false);
             $("#billing_month_from").prop('disabled', false);
             $("#billing_month_to").prop('disabled', false);
-            $("#qty").prop('required', true);
-            $("#unit_price").prop('required', true);
-            $("#account_no").prop('required', true);
-            $("#billing_month_from").prop('required', true);
-            $("#billing_month_to").prop('required', true);
-            $("#label_description").html('Description');
+
+            $("#qty").rules('add', {'required': true});
+            $("#unit_price").rules('add', {'required': true});
+            $("#account_no").rules('add', {'required': true});
+            $("#billing_month_from").rules('add', {'required': true});
+            $("#billing_month_to").rules('add', {'required': true});
+
             $("#total_amount_due").prop('readonly', false);
+
+            $("#label_description").html('Description');
 
             if(selectedCategory == "utilities"){
                 $("#description").append($('<option></option>').attr("value", "Building Rental").text("Building Rental"));
@@ -219,8 +336,9 @@
 
                 $("#qty").prop('disabled', true);
                 $("#unit_price").prop('disabled', true);
-                $("#qty").prop('required', false);
-                $("#unit_price").prop('required', false);
+                
+                $("#qty").rules('remove');
+                $("#unit_price").rules('remove');
             } else if(selectedCategory == "office_supply"){
                 $("#description").append($('<option></option>').attr("value", "Bond Paper").text("Bond Paper"));
                 $("#description").append($('<option></option>').attr("value", "Epson Ink").text("Epson Ink"));
@@ -243,9 +361,11 @@
                 $("#account_no").prop('disabled', true);
                 $("#billing_month_from").prop('disabled', true);
                 $("#billing_month_to").prop('disabled', true);
-                $("#account_no").prop('required', false);
-                $("#billing_month_from").prop('required', false);
-                $("#billing_month_to").prop('required', false);
+
+                $("#account_no").rules('remove');
+                $("#billing_month_from").rules('remove');
+                $("#billing_month_to").rules('remove');
+
                 $("#total_amount_due").prop('readonly', true);
             } else if(selectedCategory == "salary_and_rebates") {
                 getContactPersons();
@@ -253,8 +373,8 @@
                 $("#label_description").html('Contact Person');
                 $("#qty").prop('disabled', true);
                 $("#unit_price").prop('disabled', true);
-                $("#qty").prop('required', false);
-                $("#unit_price").prop('required', false);
+                $("#qty").rules('remove');
+                $("#unit_price").rules('remove');
             } else if(selectedCategory == "other_expenses"){
                 $("#description").append($('<option></option>').attr("value", "Others").text("Others"));
             }
@@ -278,24 +398,6 @@
             }
         });
     });
-
-    function getContactPersons(){
-        var userBranch = $("#branch_expenses").val();
-
-        $.getJSON('/learning-management/api/get-branch-contact-persons/' + userBranch, function(response){
-            if (response.data.length > 0) {
-                $('#description').append(newOption);
-
-                for (i = 0; i < response.data.length; i++) {
-                    var newOption = $(`<option value="${response.data[i].id}">${response.data[i].fname}</option>`);
-                    $('#description').append(newOption);
-                }
-            } else {
-                var newOption = $('<option value="">No Contact Persons available</option>');
-                $('#description').append(newOption);
-            }
-        });
-    }
 </script>
 {% endblock %}
 
@@ -324,7 +426,7 @@
                 {% endif %}
 
                 {% if current_user.role.name in ['Secretary', 'Admin'] %}
-                <button type="button" data-toggle="modal" data-target="#mdl_expenses" data-placement="bottom"
+                <button type="button" data-toggle="modal" data-target="#mdl_add_expenses" data-placement="bottom"
                     class="btn-shadow mr-3 btn btn-primary">
                    <i class="fa fa-minus"></i> Expenses
                 </button>
@@ -530,7 +632,7 @@
                         </div>
                         <div class="tab-pane show" id="tab-animated1-1" role="tabpanel">
                             <div style="margin-top: 10px;" class="table-responsive">
-                                <table id="tbl_fund_wallet_transactions" class="align-middle mb-0 table table-bordered table-striped table-hover">
+                                <table id="tbl_add_funds_transactions" class="align-middle mb-0 table table-bordered table-striped table-hover">
                                     <thead>
                                         <tr>
                                             <th class="text-center">DATE</th>
