--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -90,7 +90,7 @@
                                 <div class="col-md-4">
                                     <div class="position-relative form-group"><label for="total_amount_due"
                                             class="">Total Amount Due</label>
-                                        <input required id="total_amount_due" placeholder="Amount" step="1"
+                                        <input required id="total_amount_due" step="any" placeholder="Amount" step="1"
                                             type="number" name="total_amount_due" class="form-control">
                                     </div>
                                 </div>
