--- a/prime_admin/templates/lms/add_funds_modal.html
+++ b/prime_admin/templates/lms/add_funds_modal.html
@@ -49,7 +49,7 @@
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="amount_received"
                                             class="">Amount Received</label>
-                                            <input id="amount_received" placeholder="Amount" step="1" type="number" name="amount_received" class="form-control">
+                                            <input id="amount_received" placeholder="Amount" step="any" min=0 type="number" name="amount_received" class="form-control">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
