fix: Wrong data and total fund wallet of secretary

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -540,7 +540,7 @@
     <div class="main-card mb-3 card">
         <div class="card-header">
             {% if current_user.role.name == "Secretary" %}
-                <div id="card_header_label">{{current_user.branch.name}} BRANCH</div>
+                <div id="card_header_label">{{current_user.branch.name}}</div>
             {% else %}
                 <div id="card_header_label">ALL BRANCHES</div>
             {% endif %}
